--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "ajv-keywords": "^5.1.0",
     "antd": "^5.23.1",
     "date-fns": "^4.1.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.round": "^4.0.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -53,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@babel/preset-env": "^7.25.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.57.1",
