--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "node": true,
+    "es2021": true,
+    "es6": true
   },
   "ignorePatterns": ["node_modules", "dist", "build"],
   "extends": [
@@ -33,7 +35,7 @@
       2,
       {
         "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
-        "newlines-between": "always"
+        "newlines-between": "ignore"
       }
     ]
   },
@@ -43,6 +45,12 @@
         "extensions": [".js", ".jsx", ".ts", ".tsx"],
         "moduleDirectory": ["node_modules", "src/"]
       }
-    }
+    },
+    "react": { "version": "detect" }
+  },
+  "globals": {
+    "$": true,
+    "require": true,
+    "process": true
   }
 }
