--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     }
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,7 @@
     "ajv-keywords": "^5.1.0",
     "antd": "^5.23.1",
     "date-fns": "^4.1.0",
+    "globals": "^15.14.0",
     "lodash.debounce": "^4.0.8",
     "lodash.round": "^4.0.4",
     "prop-types": "^15.8.1",
